<resources>
    <string name="app_name">Sanskriti Decore</string>
    <string name="read_xlsx">Read XLSX</string>
    <string name="write_xlsx">Write XLSX</string>
    <string name="send_to">Send to...</string>
    <string name="search">Search</string>
    <string name="room_detail">Room Details</string>
    <string name="elight">Elight</string>
    <string name="password">Password*</string>
    <string name="userid">User Name*</string>
    <string name="signup">Sign Up</string>
    <string name="bottom"><u>Already have an account login Here</u></string>
    <string name="signin">Sign In</string>
    <string name="count">Nothing is selected</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Speak</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="about_toast">About is clicked</string>
    <string-array name="Unit">
        <item>Unit</item>
        <item>Mtr.</item>
        <item>Roll</item>
        <item>Sqft</item>
    </string-array>
    <string name="pwdtextype">abcdefghijklmnopqrstuvwxyz1234567890 </string>
    <string-array name="MaterialType">
        <item>Material Type</item>
        <item>Curtain</item>
        <item>Sofa</item>
        <item>Wall Paper</item>
        <item>Padding</item>
    </string-array>
    <string name="title_activity_home">Sanskriti Decore</string>
    <string name="title_customer">Party</string>
    <string name="title_order">Order</string>
    <string name="title_report">Report</string>
    <string name="title_status">Status</string>
    <string name="title_search">Search</string>
    <string name="title_print">Print</string>
    <string name="bottom1">Create user <u>click here</u></string>
    <string name="userContact">Contact</string>
    <string name="title_addCustomer">Add Customer</string>
    <string name="title_editCustomer">Modify Customer</string>
    <string name="title_customerList">Customer List</string>
    <string name="item_pending">Pending Order List</string>
    <string name="item_orderCreate">Order Create</string>
    <string name="item_cancelOrder">Cancel order</string>
    <string name="title_p_to_received_material">Pending to received material</string>
    <string name="title_p_c_with_noadvance">Pending customer with no advance</string>
    <string name="title_p_o_w_advance">Pending Order with advance</string>
    <string name="title_p_i_to_p_order">Pending item to place order</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="addCustomer">Add Customer</string>
    <string name="customername">Customer Name*</string>
    <string name="customercontact">Customer Contact*</string>
    <string name="address">Address</string>
    <string name="name">Interior Name</string>
    <string name="edit">Update</string>
    <string name="modifyCustomer">Modify Customer</string>
    <string name="order_date">Order_date</string>
    <string name="advance">Advance</string>
    <string name="orderCreate">Order Create</string>
    <string name="order_place">Pending to place Order</string>
    <string name="pendingtorecevedMaterial">Pending to Receive Material</string>
    <string name="received">Received</string>
    <string name="handover">Hand Over</string>
    <string name="receivedt">Received from tailor</string>
    <string name="receivedby">Received By</string>
    <string name="app_tutorial"><u>Help App Tutorial</u></string>
    <string name="dispatch">Dispatch</string>
    <string name="interioMobile">Interior contact</string>
    <string name="cpassword">Confirm Password*</string>
    <string name="pendinTorecevFromTailor">Pending to Receive from Tailor</string>
    <string name="tailor">Tailor Name</string>
    <string name="thoryAbout">Its time you revamp your home Decor!
        Brighten up those walls with colourful wall stickers, add a pretty set
        of floral printed curtains, beautify the living room with Buddha showpieces,
        add a colonial-style wall clock in your dining room, bring in a beautiful hanging ceiling lamp,
        display your favourite memories in our designer photo frames, or add
        a sweet fragrance to your home with some lavender incense sticks.</string>
    <string name="share_chooser_title">Share</string>
    <!--<string name="share_chooser_title">Share</string>-->

</resources>
