<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addCustomer"
            android:textColor="@color/sky_blue"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_above="@+id/userId"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
            android:id="@+id/centre_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_margin="35dp">

            <EditText
                android:id="@+id/customerName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/customername"
                android:textSize="15sp"
                android:inputType="text"
                android:layout_above="@+id/contact"
                android:layout_marginBottom="20dp"
                android:background="@drawable/signin_sinup_button_shape"
                android:padding="10dp" />
            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/customercontact"
                android:textSize="15sp"
                android:inputType="number"
                android:maxLength="10"
                android:layout_above="@+id/password"
                android:layout_marginBottom="20dp"
                android:background="@drawable/signin_sinup_button_shape"
                android:padding="10dp" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/address"
                android:inputType="text"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/signin_sinup_button_shape"
                android:padding="10dp" />
            <EditText
                android:id="@+id/confrmPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/password"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/signin_sinup_button_shape"
                android:padding="10dp" />
            <EditText
                android:id="@+id/interiormobile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/interioMobile"
                android:inputType="number"
                android:maxLength="10"
                android:textSize="15sp"
                android:layout_below="@+id/confrmPassword"
                android:background="@drawable/signin_sinup_button_shape"
                android:padding="10dp" />
            <Button
                android:id="@+id/customerButton"
                android:layout_width="230dp"
                android:layout_height="40dp"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="19sp"
                android:layout_below="@+id/interiormobile"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/add_cancel_button_shape" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>