<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <RelativeLayout
            android:id="@+id/centre_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_margin="35dp">

            <AutoCompleteTextView
                android:id="@+id/customerName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/customername"
                android:textSize="15sp"
                android:inputType="text"
                android:layout_above="@+id/contact"
                android:layout_marginBottom="20dp"
                android:background="@drawable/signin_sinup_button_shape"
                android:padding="13dp" />

            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:hint="@string/order_date"
                android:textSize="15sp"
                android:layout_above="@+id/password"
                android:layout_marginBottom="20dp"
                android:background="@drawable/signin_sinup_button_shape"
                android:padding="13dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/advance"
                android:inputType="number"
                android:textSize="15sp"
                android:background="@drawable/signin_sinup_button_shape"
                android:padding="13dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_marginTop="40dp"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/addOrder"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:background="@drawable/add_cancel_button_shape"
                    android:layout_below="@+id/confrmPassword" />

            </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>