<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_drop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/home_container" />


    <android.support.v7.widget.CardView
        android:id="@+id/hideCard"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:cardCornerRadius="15dp"
        android:layout_margin="25dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/centre_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp">

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/signin"-->
                <!--android:textSize="22sp"-->
                <!--android:fontFamily="serif-monospace"-->
                <!--android:textStyle="bold"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_centerHorizontal="true" />-->
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/interiorr"
                android:layout_above="@+id/userId"
                android:layout_centerHorizontal="true"/>
            <EditText
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_above="@+id/cus_address"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/signin_sinup_button_shape"
                android:drawableRight="@drawable/ic_person_outline_black_24dp"
                android:hint="@string/userid"
                android:inputType="text"
                android:textColor="@color/black"
                android:paddingLeft="14dp"
                android:paddingRight="10dp"
                android:textSize="15sp"
                android:fontFamily="@font/fonts"/>


            <EditText
                android:id="@+id/cus_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="20dp"
                android:background="@drawable/signin_sinup_button_shape"
                android:drawableRight="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/password"
                android:fontFamily="@font/fonts"
                android:inputType="textPassword"
                android:paddingLeft="14dp"
                android:paddingRight="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"/>


            <Button
                android:id="@+id/signinButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/cus_address"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/add_cancel_button_shape"
                android:text="@string/signin"
                android:fontFamily="@font/fonts"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signupHere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signinButton"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/bottom1"
                android:textColor="@color/fontcolor"
                android:textSize="14sp"
                android:fontFamily="@font/fonts"/>
            <TextView
                android:id="@+id/app_tutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_tutorial"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/signupHere"
                android:fontFamily="@font/fonts" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
    </RelativeLayout>
</RelativeLayout>
