<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp">

        <RelativeLayout
            android:id="@+id/centre_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_centerInParent="true"
            android:layout_margin="13dp">

            <Spinner
                android:id="@+id/spinnerUserRole"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_above="@+id/input_layout_design"
                android:layout_marginBottom="20dp"
                android:background="@drawable/signin_sinup_button_shape"
                android:padding="8dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_alignBottom="@+id/spinnerUserRole"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                android:tint="@color/gray" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_design"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_above="@+id/input_layout_password"
                android:hint="@string/userid">


            <EditText
                android:id="@+id/customerName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:hint="                 "
                android:paddingLeft="14dp"
                android:paddingRight="10dp"
                android:textSize="15sp"
                android:inputType="text"
                android:layout_above="@+id/password"
                android:layout_marginBottom="20dp"
                android:drawableRight="@drawable/ic_person_outline_black_24dp"
                android:background="@drawable/signin_sinup_button_shape" />
            </android.support.design.widget.TextInputLayout>




            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/password">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="                  "
                android:inputType="textPassword"
                android:paddingLeft="14dp"
                android:paddingRight="10dp"
                android:textSize="15sp"
                android:layout_marginBottom="20dp"
                android:drawableRight="@drawable/ic_lock_outline_black_24dp"
                android:background="@drawable/signin_sinup_button_shape" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_confrmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@+id/input_layout_password"
                android:hint="@string/cpassword">
            <EditText
                android:id="@+id/confrmPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="false"
                android:layout_below="@+id/password"
                android:hint="                     "
                android:inputType="textWebPassword"
                android:paddingLeft="14dp"
                android:paddingRight="10dp"
                android:textSize="15sp"
                android:drawableRight="@drawable/ic_lock_outline_black_24dp"
                android:background="@drawable/signin_sinup_button_shape" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="19sp"
                android:background="@drawable/add_cancel_button_shape"
                android:layout_below="@+id/input_layout_confrmPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/loginHere"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/bottom"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center_horizontal"
                android:layout_below="@+id/signupButton"
                android:layout_marginTop="10dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>